= Release Notes

The release notes for current and past releases are in the github under releases.

== Version 1.0.5, 2024-09-21

v1.0.5 "Clock Watcher" is a minor revision; changes include:

* Break timer now in own "JFrame" window, works correctly.
* Scroll wheel support! For moving from page to page.
* Color picker bar in left panel w/ 7 predefs and a picker launcher
* CTRL/Z CMD/Z alias for Undo button, for undoing one or more draw commands
* Adds background images to the break timer;
* Adds Delete Page function (non-persistent);
* Pointer mode pops back to View after adding Text item;
* Custom slide show (contiguous range only);
* Defaults to single monitor even on dual-monitor setups;
* Dialog to set line/draw thickness, with live preview
* Single letter commands to switch to t)ext, l)ine, o)val, etc - only with focus in display page, for now.
* Corrects several minor bugs, including:
** Color choice was static, not per-object
** View window came up wrong size if you have two monitors

=== Known Issues/Bugs

* Text draw dialog, hitting ESC or Cancel leaves "Uninitialized Value" text.
* Drawn objects sometimes drawn in wrong places.
* Still can't select text or find text. Sorry.
* Mac only: The color selector is drawn too large on some screens, but 
all the colors are at least clickable.

== Version 1.0.4, 2023-05

v1.0.4 "Double Header" is the first release supporting two monitors, as conventional slide show programs do.
The "control" screen has the control buttons and the "view" screen goes full-screen on the second monitor.
This is beta and has not been extensively tested, so comments would be welcome!

Of course it still works on a single monitor.

I suspect the #1 feature request will be the ability to choose which monitor to have which screen on.
My first idea is to just open the control screen on whichever screen you start the program on,
and the view screen on the other. Other ideas?