@@ -1,4 +1,4 @@
-= `PdfShow` Usage
+= PdfShow: The Simple PDF Presentation Tool
 :author: Ian Darwin
 
 `PdfShow` is a simple Java-based PDF viewer specifically for running slide shows.
@@ -14,6 +14,8 @@ This program is free software and may be copied for use without fee.
 The source code is https://github.com/IanDarwin/pdfshow[available on my GitHub repository];
 if you are a developer and would like to improve it, see the _docs_ directory.
 Github pull requests are welcome.
+
+For current improvements (and known bugs), see the link:release-notes.html[release notes].
 
 == Installing it
 
@@ -55,7 +57,8 @@ If you have two, you can try the -2 argument when starting the program;
 this will put the control screen on the first monitor
 and take the second monitor entirely for the slideshow.
 
-image::../images/control-view.png[width="600"]
+* You can't draw on the miniature view (yet?), and it doesn't show your drawings.
+* If you unplug the second monitor, you have to re-start PDFshow, but that shouldn't be a problem.
 
 === Navigation
 
