@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="generator" content="Asciidoctor 2.0.20">
 <meta name="author" content="Ian Darwin">
-<title>PdfShow Usage</title>
+<title>PdfShow: The Simple PDF Presentation Tool</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700">
 <style>
 /*! Asciidoctor default stylesheet | MIT License | https://asciidoctor.org */
@@ -436,7 +436,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article">
 <div id="header">
-<h1><code>PdfShow</code> Usage</h1>
+<h1>PdfShow: The Simple PDF Presentation Tool</h1>
 <div class="details">
 <span id="author" class="author">Ian Darwin</span><br>
 </div>
@@ -459,6 +459,9 @@ to make the slides come alive, then <code>PdfShow</code> may be right for you.</
 The source code is <a href="https://github.com/IanDarwin/pdfshow">available on my GitHub repository</a>;
 if you are a developer and would like to improve it, see the <em>docs</em> directory.
 Github pull requests are welcome.</p>
+</div>
+<div class="paragraph">
+<p>For current improvements (and known bugs), see the <a href="release-notes.html">release notes</a>.</p>
 </div>
 </div>
 </div>
@@ -523,10 +526,15 @@ If you have two, you can try the -2 argument when starting the program;
 this will put the control screen on the first monitor
 and take the second monitor entirely for the slideshow.</p>
 </div>
-<div class="imageblock">
-<div class="content">
-<img src="../images/control-view.png" alt="control view" width="600">
-</div>
+<div class="ulist">
+<ul>
+<li>
+<p>You can&#8217;t draw on the miniature view (yet?), and it doesn&#8217;t show your drawings.</p>
+</li>
+<li>
+<p>If you unplug the second monitor, you have to re-start PDFshow, but that shouldn&#8217;t be a problem.</p>
+</li>
+</ul>
 </div>
 </div>
 <div class="sect2">
@@ -641,7 +649,7 @@ it will resume where you left off. This behaviour is true by default.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2024-09-21 21:39:55 -0400
+Last updated 2024-09-21 21:47:03 -0400
 </div>
 </div>
 </body>
